# RootCause-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
backend/: __init__.py
backend/app/: __init__.py  config.py
backend/app/core/: __init__.py  allowlist.py  ssh_runner.py
backend/app/db/: __init__.py
backend/app/tools/: __init__.py  certificate.py  connectivity.py  disk.py  dns.py  logs.py  memory.py  network.py  packets.py  ports.py  process.py  registry.py  service.py
backend/tests/: test_allowlist.py  test_config.py  test_edge_cases.py  test_ssh_runner.py
backend/tests/test_tools/: __init__.py  test_network_tools.py  test_packets.py  test_registry.py  test_system_tools.py
incidents/reset/: 10-tcp-retransmissions-reset.sh
incidents/seed/: 10-tcp-retransmissions.sh
